--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   },
   "require":{
     "php":">=5.5.0",
-    "contao/core-bundle":"~3.5 | ~4.3",
+    "contao/core-bundle":"~4.3",
     "contao-community-alliance/composer-plugin": "~2.4 | ~3.0",
     "netzmacht/contao-leaflet-libraries":"~1.0"
   },
