--- a/composer.json
+++ b/composer.json
@@ -1,44 +1,70 @@
 {
-  "name":"netzmacht/contao-leaflet-geocode-widget",
-  "description":"Geocode widget based on Leaflet",
-  "keywords":["geocode", "contao", "widget", "leaflet"],
-  "type":"contao-bundle",
-  "license":"LGPL-3.0+",
-  "authors":[
-    {
-      "name":"David Molineus",
-      "email":"mail@netzmacht.de",
-      "homepage":"http://www.netzmacht.de",
-      "role":"Project leader"
+    "name": "netzmacht/contao-leaflet-geocode-widget",
+    "description": "Geocode widget based on Leaflet",
+    "keywords": [
+        "geocode",
+        "contao",
+        "widget",
+        "leaflet"
+    ],
+    "type": "contao-bundle",
+    "license": "LGPL-3.0+",
+    "authors": [
+        {
+            "name": "David Molineus",
+            "email": "mail@netzmacht.de",
+            "homepage": "http://www.netzmacht.de",
+            "role": "Project leader"
+        }
+    ],
+    "support": {
+        "email": "mail@netzmacht.de",
+        "issues": "https://github.com/contao-bootstrap/core/issues",
+        "wiki": "http://contao-bootstrap.netzmacht.de",
+        "source": "https://github.com/contao-bootstrap/core"
+    },
+    "require": {
+        "php": ">=5.5.0",
+        "contao/core-bundle": "~4.3",
+        "contao-community-alliance/composer-plugin": "~2.4 || ~3.0",
+        "netzmacht/contao-leaflet-libraries": "~1.0",
+        "contao-community-alliance/composer-client": "~0.14"
+    },
+    "require-dev": {
+        "netzmacht/contao-build-tools": "~1.1",
+        "contao/manager-plugin": "^2.0"
+    },
+    "conflict": {
+        "contao/manager-plugin": "<2.0 || >=3.0"
+    },
+    "suggest": {
+        "netzmacht/contao-leaflet-maps": "Leaflet Maps for Contao"
+    },
+    "autoload": {
+        "psr-4": {
+            "Netzmacht\\Contao\\Leaflet\\GeocodeWidget\\": "src/"
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev",
+            "dev-develop": "1.1.x-dev"
+        },
+        "contao-manager-plugin": "Netzmacht\\Contao\\Leaflet\\GeocodeWidget\\ContaoManager\\Plugin"
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://legacy-packages-via.contao-community-alliance.org/"
+        },
+        {
+            "type": "artifact",
+            "url": "packages"
+        }
+    ],
+    "config": {
+        "component-dir": "../assets/components"
     }
-  ],
-  "support":{
-    "email":"mail@netzmacht.de",
-    "issues":"https://github.com/contao-bootstrap/core/issues",
-    "wiki":"http://contao-bootstrap.netzmacht.de",
-    "source":"https://github.com/contao-bootstrap/core"
-  },
-  "require":{
-    "php":">=5.5.0",
-    "contao/core-bundle":"~4.3",
-    "contao-community-alliance/composer-plugin": "~2.4 | ~3.0",
-    "netzmacht/contao-leaflet-libraries":"~1.0"
-  },
-  "require-dev": {
-    "netzmacht/contao-build-tools": "~1.1"
-  },
-  "suggest": {
-    "netzmacht/contao-leaflet-maps": "Leaflet Maps for Contao"
-  },
-  "autoload": {
-    "psr-4": { "Netzmacht\\Contao\\Leaflet\\GeocodeWidget\\": "src/" }
-  },
-  "extra":{
-    "branch-alias": {
-      "dev-master": "1.0.x-dev",
-      "dev-develop": "1.1.x-dev"
-    }
-  },
-  "minimum-stability": "dev",
-  "prefer-stable": true
 }
