--- a/composer.json
+++ b/composer.json
@@ -53,18 +53,5 @@
         "contao-manager-plugin": "Netzmacht\\Contao\\Leaflet\\GeocodeWidget\\ContaoManager\\Plugin"
     },
     "minimum-stability": "dev",
-    "prefer-stable": true,
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://legacy-packages-via.contao-community-alliance.org/"
-        },
-        {
-            "type": "artifact",
-            "url": "packages"
-        }
-    ],
-    "config": {
-        "component-dir": "../assets/components"
-    }
+    "prefer-stable": true
 }
