--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     },
     "require": {
         "php": ">=5.5.0",
-        "contao/core-bundle": "~4.3",
+        "contao/core-bundle": "^4.4.2",
         "contao-community-alliance/composer-plugin": "~2.4 || ~3.0",
         "netzmacht/contao-leaflet-libraries": "~1.0"
     },
