--- a/composer.json
+++ b/composer.json
@@ -24,17 +24,13 @@
         "source": "https://github.com/contao-bootstrap/core"
     },
     "require": {
-        "php": ">=5.5.0",
-        "contao/core-bundle": "^4.4.2",
-        "contao-community-alliance/composer-plugin": "~2.4 || ~3.0",
+        "php": ">=5.6.0",
+        "contao/core-bundle": "~4.4.0",
         "netzmacht/contao-leaflet-libraries": "~1.0"
     },
     "require-dev": {
-        "netzmacht/contao-build-tools": "~1.1",
-        "contao/manager-plugin": "^2.0"
-    },
-    "conflict": {
-        "contao/manager-plugin": "<2.0 || >=3.0"
+        "contao/manager-plugin": "^2.0",
+        "phpcq/all-tasks": "^1.2"
     },
     "suggest": {
         "netzmacht/contao-leaflet-maps": "Leaflet Maps for Contao"
@@ -50,7 +46,5 @@
             "dev-develop": "1.1.x-dev"
         },
         "contao-manager-plugin": "Netzmacht\\Contao\\Leaflet\\GeocodeWidget\\ContaoManager\\Plugin"
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    }
 }
