--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="contao-bootstrap/grid" default="build">
+<project name="netzmacht/contao-leaflet-geocode-widget" default="build">
     <!-- import the main build system -->
     <import file="vendor/phpcq/phpcq/phpcq.main.xml" />
 </project>
