--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,18 @@ php:
   - "5.6"
   - "7.0"
   - "7.1"
+  - "7.2"
 
 env:
-  - CONTAO_VERSION=contao/core-bundle ^4.4.2
+  - CONTAO_VERSION=contao/core-bundle ~4.4.2
+  - CONTAO_VERSION=contao/core-bundle ~4.5.0
 
 matrix:
   exclude:
+    - php: 5.6
+      env: CONTAO_VERSION=contao/core-bundle ~4.5.0
+    - php: 7.0
+      env: CONTAO_VERSION=contao/core-bundle ~4.5.0
 
 sudo: false
 
