Make service public as Contao requires it in a symfony 3.4 context.

--- a/src/Resources/config/listeners.yml
+++ b/src/Resources/config/listeners.yml
@@ -1,3 +1,4 @@
 services:
   netzmacht.contao_leaflet_geocode.listeners.radius_wizard:
     class: Netzmacht\Contao\Leaflet\GeocodeWidget\EventListener\RadiusWizardCallbackListener
+    public: true
