--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
         "source": "https://github.com/contao-bootstrap/core"
     },
     "require": {
-        "php": ">=5.6.0",
-        "contao/core-bundle": "^4.4.0",
+        "php": "^7.4 || ^8.0",
+        "contao/core-bundle": "^4.13 || ^5.0",
         "netzmacht/contao-leaflet-libraries": "~1.3"
     },
     "require-dev": {
